# Quest-SongCore

./: .gitignore  CMakeLists.txt  README.md  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
assets/: colors.bsml  deletemodal.bsml  requirements.bsml
include/: File.hpp  OggVorbis.hpp  assets.hpp  config.hpp  coroutines.hpp  delegates.hpp  ffi.h  hooking.hpp  logging.hpp  main.hpp  tasks.hpp
include/Installers/: MenuInstaller.hpp
include/Overrides/: NegativeNJSOverride.hpp  RotationSpawnLinesOverride.hpp
include/SongLoader/: NavigationControllerUpdater.hpp  SongCoreCustomBeatmapLevelCollection.hpp  SongCoreCustomBeatmapLevelPackCollection.hpp  SongCoreCustomLevelPack.hpp  SongLoader.hpp
include/UI/: ColorsOptions.hpp  DeleteLevelButton.hpp  IconCache.hpp  PlayButtonsUpdater.hpp  ProgressBar.hpp  RefreshSongButton.hpp  (+3 more)
scripts/: addr2line.ps1  build.ps1  copy.ps1  createqmod.ps1
shared/: Capabilities.hpp  Characteristics.hpp  CustomJSONData.hpp  LevelSelect.hpp  PlayButtonInteractable.hpp  SongCore.hpp  _config.h
song_load_rs/: Cargo.toml  build.rs  wrapper.h
song_load_rs/benches/: hash_bench.rs  song_load_bench.rs
song_load_rs/src/: audio_load.rs  beatmap.rs  cache.rs  hash.rs  lib.rs  models.rs  song_load.rs
song_load_rs/src/cache/: file_cache.rs  mem_cache.rs
song_load_rs/tests/: audio_length.rs  hash.rs  mem_cache.rs  song_load.rs
src/: Capabilities.cpp  Characteristics.cpp  CustomJSONData.cpp  File.cpp  LevelSelect.cpp  OggVorbis.cpp  PlayButtonInteractable.cpp  SongCore.cpp  config.cpp  ffi.cpp  main.cpp
(+63 files in other folders)
