[package]
name = "song_load_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "song_load_rs"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
paper2_tracing = { git = "https://github.com/Fernthedev/paperlog.git", package = "paper2_tracing" }
tracing = "0.1"
tracing-subscriber = "0.3"


[build-dependencies]
bindgen = "0.72"
cbindgen = "0.29"
