[package]
name = "song_load_rs"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "song_load_bench"
harness = false

[[bench]]
name = "hash_bench"
harness = false

[lib]
name = "song_load_rs"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bytes = "1.11.0"
paper2_tracing = { git = "https://github.com/Fernthedev/paperlog.git", package = "paper2_tracing", optional = true}
sha1 = "0.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"
thiserror = "2"
symphonia = { version = "0.5", features = ["wav", "vorbis"] }

# Android aarch64 dependencies
[target.aarch64-linux-android.features]
default = ["paper2-logging"]

[features]
default = []
paper2-logging = ["dep:paper2_tracing"]

[build-dependencies]
bindgen = "0.72"
cbindgen = "0.29"

[dev-dependencies]
criterion = "0.8"
